WebCore/html/HTMLMediaElement.h
@@ -65,7 +65,9 @@ public:
     
     virtual bool isVideo() const { return false; }
     virtual bool hasVideo() const { return false; }
-    
+
+    virtual bool supportsFullscreen() const { return false; }
+
     void scheduleLoad();
     
     virtual void defaultEventHandler(Event*);
